tests/baselines/reference/tsxErrorRecovery3.errors.txt
tests/cases/conformance/jsx/file1.tsx(4,2): error TS2304: Cannot find name 'React'.
tests/cases/conformance/jsx/file1.tsx(5,2): error TS2304: Cannot find name 'React'.
tests/cases/conformance/jsx/file1.tsx(6,1): error TS2657: JSX expressions must have one parent element
tests/cases/conformance/jsx/file2.tsx(1,10): error TS2304: Cannot find name 'React'.
tests/cases/conformance/jsx/file2.tsx(1,21): error TS2304: Cannot find name 'React'.
tests/cases/conformance/jsx/file2.tsx(2,1): error TS2657: JSX expressions must have one parent element


==== tests/cases/conformance/jsx/file1.tsx (3 errors) ====
    
    declare namespace JSX { interface Element { } }
    
    <div></div>
     ~~~
!!! error TS2304: Cannot find name 'React'.
    <div></div>
     ~~~
!!! error TS2304: Cannot find name 'React'.
    
    
!!! error TS2657: JSX expressions must have one parent element
==== tests/cases/conformance/jsx/file2.tsx (3 errors) ====
    var x = <div></div><div></div>
             ~~~
!!! error TS2304: Cannot find name 'React'.
                        ~~~
!!! error TS2304: Cannot find name 'React'.
    
    
!!! error TS2657: JSX expressions must have one parent element